<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/activity_create_title">

            <Button
                android:id="@+id/btCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:text="@string/activity_create_btCreate"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/prompt_Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/prompt_id"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/prompt_Account"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/prompt_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prompt_Id" />

            <TextView
                android:id="@+id/prompt_URL"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/prompt_url"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prompt_Account" />

            <TextView
                android:id="@+id/prompt_User"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/prompt_user"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prompt_URL" />

            <TextView
                android:id="@+id/prompt_Password"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/prompt_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prompt_Brief" />

            <TextView
                android:id="@+id/textView_Id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@+id/prompt_Id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editText_Account"
                app:layout_constraintTop_toTopOf="@+id/prompt_Id" />

            <EditText
                android:id="@+id/editText_Account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="account"
                android:ems="10"
                android:hint="@string/hint_mandatory"
                android:importantForAutofill="auto"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/prompt_Account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prompt_Account"
                app:layout_constraintTop_toTopOf="@+id/prompt_Account" />

            <EditText
                android:id="@+id/editText_URL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:autofillHints="url"
                android:ems="10"
                android:hint="@string/hint_optional"
                android:importantForAutofill="auto"
                android:inputType="textUri"
                app:layout_constraintBottom_toBottomOf="@+id/prompt_URL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editText_Account"
                app:layout_constraintTop_toTopOf="@+id/prompt_URL" />

            <EditText
                android:id="@+id/editText_User"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:autofillHints="user"
                android:ems="10"
                android:hint="@string/hint_optional_recommended"
                android:importantForAutofill="auto"
                android:inputType="textPersonName|textEmailAddress"
                app:layout_constraintBottom_toBottomOf="@+id/prompt_User"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editText_URL"
                app:layout_constraintTop_toTopOf="@+id/prompt_User" />

            <EditText
                android:id="@+id/editText_Password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/hint_mandatory"
                android:importantForAutofill="auto"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                app:layout_constraintBottom_toBottomOf="@+id/prompt_Password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editText_User"
                app:layout_constraintTop_toTopOf="@+id/prompt_Password"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/btGenerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@android:color/transparent"
                android:text="@string/prompt_button_generate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_Password" />

            <CheckBox
                android:id="@+id/checkBox_Expire"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:text="@string/prompt_checkbox_expire"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/btGenerate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btGenerate" />

            <TextView
                android:id="@+id/textView_ExpireDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/checkBox_Expire"
                app:layout_constraintStart_toStartOf="@+id/checkBox_Expire"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_Expire" />

            <TextView
                android:id="@+id/prompt_Brief"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/prompt_brief"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prompt_User" />

            <EditText
                android:id="@+id/editText_Brief"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:autofillHints="description"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_optional"
                android:importantForAutofill="auto"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="@+id/prompt_Brief"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editText_Password"
                app:layout_constraintTop_toTopOf="@+id/prompt_Brief" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>